--- a/CustomSlider/CustomSlider/MainPage.xaml
+++ b/CustomSlider/CustomSlider/MainPage.xaml
@@ -43,7 +43,7 @@
                     
                     <Grid x:Name="LeftHandle" Style="{StaticResource HandleStyle}" Grid.ColumnSpan="3"
               ManipulationMode="TranslateX" 
-              ManipulationDelta="LeftHandle_ManipulationDelta" ManipulationCompleted="LefHandleCompleted" Width="40" Margin="0" Height="40">
+              ManipulationDelta="LeftHandle_ManipulationDelta" Width="40" Margin="0" Height="40">
                         <Grid.Background>
                             <ImageBrush Stretch="Fill" ImageSource="Assets/scrubber_control_normal.png"/>
                         </Grid.Background>
@@ -55,7 +55,7 @@
                     </Grid>
                     <Grid x:Name="RightHandle" Style="{StaticResource HandleStyle}" Grid.ColumnSpan="3"
               ManipulationMode="TranslateX" 
-              ManipulationDelta="RightHandle_ManipulationDelta" ManipulationCompleted="RightHandleCompleted" RenderTransformOrigin="0.5,0.5" Width="40" Height="40">
+              ManipulationDelta="RightHandle_ManipulationDelta" RenderTransformOrigin="0.5,0.5" Width="40" Height="40">
                         <Grid.Background>
                             <ImageBrush Stretch="Fill" ImageSource="Assets/scrubber_control_normal.png"/>
                         </Grid.Background>
